fix: wrong font name character case

--- a/src/global.css
+++ b/src/global.css
@@ -51,7 +51,7 @@ body {
 }
 
 @font-face {
-    font-family: "Jetbrains Mono";
+    font-family: "JetBrains Mono";
     src: url("JetBrainsMono-Regular.ttf") format("truetype");
     font-weight: normal;
     font-style: normal;
